Bug 1270110 - Bail on unsupported libspeechd versions. r=smaug, a=ritu

libspeechd does not have a version getter function, so we need to look for a recent
API addition to know we are on a newer version.

MozReview-Commit-ID: FpXwGYMxxDB

--HG--
extra : source : 67c98d7f2d47b5711cf1b90b1c4ceea64519e4fd