dom/media/webspeech/synth/speechd/SpeechDispatcherService.cpp
@@ -344,6 +344,13 @@ SpeechDispatcherService::Setup()
     return;
   }
 
+  if (!PR_FindFunctionSymbol(speechdLib, "spd_get_volume")) {
+    // There is no version getter function, so we rely on a symbol that was
+    // introduced in release 0.8.2 in order to check for ABI compatibility.
+    NS_WARNING("Unsupported version of speechd detected");
+    return;
+  }
+
   for (uint32_t i = 0; i < ArrayLength(kSpeechDispatcherSymbols); i++) {
     *kSpeechDispatcherSymbols[i].function =
       PR_FindFunctionSymbol(speechdLib, kSpeechDispatcherSymbols[i].functionName);
